--- a/estilo.css
+++ b/estilo.css
@@ -122,14 +122,15 @@ footer {
 }
 
 .img {
-    height: 400px;      
+    display: block;
+    margin: 20px auto;
+    width: 100%;
+    max-width: 450px;
+    height: auto;     
+    max-height: 380px;
     object-fit: cover;  
-    border-radius: 20px;
-    width: 30%; 
     border-radius: 14px;
     overflow: hidden;
     box-shadow: 0 4px 14px rgba(0,0,0,0.25);
     border: 5px solid #4e6c3b;
-    max-height: 380px;
-    object-fit: cover;
 }
